Fixed - line break in result

--- a/public/style.css
+++ b/public/style.css
@@ -178,3 +178,6 @@ footer a {
     background-color: #16161D;
     color: white;
 }
+.linebrk{
+    margin: 0;
+}
